--- a/src/App.css
+++ b/src/App.css
@@ -117,6 +117,7 @@ h2 {
 }
 
 .layout {
+  max-width: 100vw;
   scroll-behavior: smooth;
 }
 
@@ -155,6 +156,7 @@ h2 {
   transition: margin 0.3s ease;
 }
 
+
 /* 🌐 Mobilde sola yaslasın */
 @media (max-width: 768px) {
   .main-content {
@@ -168,6 +170,7 @@ h2 {
   margin-left: 260px;
   width: calc(100vw - 260px);
   transition: margin 0.3s ease, width 0.3s ease;
+  
 }
 
 /* Eğer sidebar kapalıysa genişle */
