--- a/src/Components/Welcome.css
+++ b/src/Components/Welcome.css
@@ -1,82 +1,3 @@
-/*.home-section {
-  background-image: url('/public/images/Arkaplanbuse.png');
-  background-size: cover;
-  background-position: center;
-  background-repeat: no-repeat;
-
-  width: 100vw;
-  height: 100vh;
-
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  color: white;
-  padding: 0 20px;
-  text-align: center;
-  position: relative;
-  overflow: hidden;
-}*/
-
-/*.home-section {
-  position: relative; 
-  background-image: url('/public/images/Arkaplanbuse.png');
-  background-size: cover;
-  background-position: center;
-  background-repeat: no-repeat;
-  width: 100vw;
-  height: 100vh;
-  overflow: hidden;
-}
-
-
-.home-content {
-  max-width: 90%;
-  z-index: 1;
-
-  position: absolute;
-  top: 50%;
-  left: 45%;
-  transform: translate(-50%, -50%);
-  text-align: center;
-}
-
-
-.typewriter-text {
-  overflow: hidden;
-  border-right: 3px solid #ffffff;
-  white-space: nowrap;
-  letter-spacing: 2px;
-  animation: typing 3s steps(30, end), blink 0.75s step-end infinite;
-  display: flex;
-  font-size: 60px;
-  font-weight: bold;
-
-  background: linear-gradient(90deg, #308dbe, #ffffff);
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
-  margin-bottom: 10px;
-
-.home-subtitle {
-  font-size: 22px;
-  margin-top: 20px;
-}
-
-@media (max-width: 768px) {
-  .home-section {
-    padding: 0 16px;
-    height: 100vh;
-  }
-
-  .typewriter-text {
-    font-size: 34px;
-  }
-
-  .home-subtitle {
-    font-size: 16px;
-  }
-}
-*/
-
 .home-section {
   position: relative;
   background-image: url('/public/images/Arkaplanbuse.png');
@@ -105,7 +26,7 @@
   justify-content: center;
   height: 100%;
 
-  transform: translateX(-130px); /* 💡 Sidebar'ın etkisini dengeler */
+  transform: translateX(-130px);
 }
 
 .typewriter-text {
@@ -128,7 +49,6 @@
   margin-top: 10px;
 }
 
-/* Mobil uyum */
 @media (max-width: 768px) {
   .typewriter-text {
     font-size: 34px;
@@ -137,7 +57,7 @@
   }
 
   .home-content {
-    transform: none; /* Mobilde düz hizalanır */
+    transform: none; 
   }
 
   .home-section {
